Chayns Checkbox Issue #2 This rule will hide the symbol when uncheck the checkbox on mobile devices.

--- a/src/scss/_objects/_forms/checkbox.scss
+++ b/src/scss/_objects/_forms/checkbox.scss
@@ -64,3 +64,12 @@
     box-shadow: inset 0 0 0 10px $checkbox-checked-background-color;
   }
 }
+
+
+html.chayns--app,
+html.chayns--tablet,
+html.chayns--mobile{
+  .checkbox:not(:disabled):not(:checked) + label:hover:after{
+    opacity: 0;
+  }
+}
